<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shogoyamada.androiddesignsupportlibrary.Activitys.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Android Design Support Library 練習"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/tab_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="たぶれいあうと"
            />

        <Button
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="なゔぃげいしょんれいあうと"
            />

        <Button
            android:id="@+id/text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="てきすといんっぷっとれいあうと"
            />

        <Button
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ふろーてぃんぐぼたん"
            />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
